--- a/HTML/Bulk.html
+++ b/HTML/Bulk.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container-fluid">
-        <a href="#" class="back-btn">
-            <i class="fas fa-arrow-left"></i>
-            Back
-        </a>
+        <div style="text-align: right;">
+            <button class="back-button"><i class="fa-solid fa-arrow-left"
+                style="margin-right: 12px;"></i>Back</button>
+        </div>
         
         <div class="page-header">
             <h1 class="page-title">Bulk</h1>
